discussion/kv_engine/155140/155140_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Remove implicit creation of the ExecutorPool

Make sure it is explicitly created before it is used. This is
mostly a "test issue" as the memcached core explicitly create
the pool before starting to accept clients (and shut it down
as part of shutdown)

Change-Id: I36786a844de7dea359bf0cb5ecba77b086e96f52

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 11:06:10.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 13:30:16.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9590/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9590/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9590/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36545/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36545/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11166/ : FAILURE

Compile error at [2021-06-08T11:57:34.115Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11166/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11314/ : FAILURE

Compile error at [2021-06-08T12:17:59.946Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11314/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8188/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/134/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31230/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10237/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11586/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19169/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
